tests/snapshots/run_wpt_conformance__litert_sub_float32_3D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sub.https.any.js",
    "sub float32 3D tensors",
    "litert",
    "PASS",
)
